[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/PrimaryTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/PIXELFONT225.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/EndMatchScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[node name="EndMatchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1104, -552 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 224.0
margin_bottom = 80.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 12.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "match Over"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 40.0
custom_constants/separation = 16
alignment = 1

[node name="BlueScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 91.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.156863, 0.4, 0.603922, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Dash" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 117.0
margin_bottom = 12.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "-"
align = 1

[node name="RedScore" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 133.0
margin_right = 157.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.807843, 0.101961, 0.101961, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 224.0
margin_bottom = 76.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 85.0
margin_right = 138.0
margin_bottom = 20.0
custom_constants/separation = 8
alignment = 1

[node name="RematchBtn" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 53.0
margin_bottom = 6.0
text = "Rematch"

[node name="MainMenuBtn" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 14.0
margin_right = 53.0
margin_bottom = 20.0
text = "Main menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer2/RematchBtn" to="." method="_on_RematchBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer2/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
